--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,7 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.jpa.properties.hibernate.jdbc.time_zone = UTC
+#spring.jpa.properties.hibernate.jdbc.time_zone = UTC
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
